--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: Rubik;
+  background-image: url("../../../_img/frenteUTNLaRioja.jpg");
 }
 .display-1 {
   font-family: 'Rubik', sans-serif;
